--- a/package.json
+++ b/package.json
@@ -1,14 +1,35 @@
 {
-    "name": "BrowserQuest"
-  , "version": "0.0.1"
-  , "private": false 
-  , "dependencies": {
-    "underscore": ">0"
-    , "log": ">0"
-    , "bison": ">0"
-    , "websocket": ">0"
-    , "websocket-server": ">0"
-    , "sanitizer": ">0"
-    , "memcache": ">0"
-  }
+  "name": "The-Bunker",
+  "description": "Chrome App For Procrastinators",
+  "version": "1.0",
+  "keywords": [
+    "The-Bunker",
+    "Proxy",
+    "Unblocker",
+    "alloy",
+    "web unblocker",
+    "The Bunker",
+    "the bunker",
+    "unblock",
+    "unblock school ",
+    "unblock chromebook",
+    "school",
+    "workplace",
+    "webfilter"
+  ],
+  "author": "Stewpidtnlvr (sk8ordiechicago#4895)",
+  "dependencies": {
+    "ws": "^7.4.3"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/stewpidtnlvr/The-Bunker.git"
+    }
+  ]
 }
