--- a/alloy/package.json
+++ b/alloy/package.json
@@ -7,8 +7,8 @@
     "lib": "lib"
   },
   "dependencies": {
-    "ws": "^7.4.3"
-  },
+    "jsdom": "^16.5.1",
+    "ws": "^7.4.3"  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
