--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,18 @@
   "theme_color": "hsl(157,100%,50%)",
   "background_color": "hsl(157,100%,50%)",
   "display": "standalone",
-  "start_url": "/public/index.html",
+  "start_url": "./public/index.html",
    "icons" : [
-    {"src": "/public/192.png", "sizes" : "192x192", "type": "image/png"},
-    {"src": "/public/144.png", "sizes" : "144x144", "type": "image/png"},
-    {"src": "/public/96.png", "sizes" : "96x96", "type": "image/png"},
-    {"src": "/public/48.png", "sizes" : "48x48", "type": "image/png"}
+    {"src": "192.png", "sizes" : "192x192", "type": "image/png"},
+    {"src": "144.png", "sizes" : "144x144", "type": "image/png"},
+    {"src": "96.png", "sizes" : "96x96", "type": "image/png"},
+    {"src": "48.png", "sizes" : "48x48", "type": "image/png"}
 ],
   "serviceworker": {
   "src": "pwabuilder-sw.js",
 "type": "Offline copy of assets",
     "update_via_cache": "none",
-       "scope": "/public/"
+       "scope": "./public/"
 
 }
 }
