--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "theme_color": "hsl(157,100%,50%)",
   "background_color": "hsl(157,100%,50%)",
   "display": "standalone",
-  "start_url": "/index.html",
+  "start_url": "/?utm_source=web_app_manifest",
    "icons" : [
     {"src": "192.png", "sizes" : "192x192", "type": "image/png"},
     {"src": "144.png", "sizes" : "144x144", "type": "image/png"},
